# SecOpsAgent

./: .env  .gitignore  README.md  client.py  deploy.sh  main.py  pyproject.toml
security_agent/: .env  agent.py  auth.py
